# demoqa-ui-tests

./: .env.example  .gitignore  README.md  pyproject.toml
demoqa/framework/: demoqa_with_env.py
demoqa/model/controls/: checkbox.py  datepicker.py  dropdown.py  radio.py  uploader.py
demoqa/model/pages/: practice_form.py  practice_form_modular_paradigm.py
demoqa/utils/: base_session.py
tests/: conftest.py  test_demowebshop.py  test_practice_form.py
tests/allure-results/: 0745df0e-a68e-4a34-a5e6-83e13196999a-container.json  6390a245-ca2d-4dbe-a4ea-de9da22fed32-container.json  6c83382f-6ebc-486d-9bce-357b61513244-result.json  7707f87f-6803-4e85-b838-8bf41c6d994f-attachment.html  89b62df3-8e03-4285-8466-c24656adbd98-attachment.txt  ab26f478-f8af-4a42-807f-9eaf36223cd1-result.json  b0f5eaa9-5b1e-4e29-9c07-f09c36a1f843-attachment.txt  fe20ef33-f7dd-46e5-81e8-c3f10cfb6bfa-attachment.html  febc521c-d30c-4af5-a624-5f27f5cc565c-container.json
