[tool.poetry]
name = "demoqa-ui-tests"
version = "0.1.0"
description = ""
authors = ["evensty <maxim.veselov11@gmail.com>"]
readme = "README.md"
packages = [{include = "demoqa_ui_tests"}]

[tool.poetry.dependencies]
python = "^3.10"
selene = "2.0.0b17"
requests = "^2.28.2"
pytest = "^7.2.2"
allure-pytest = "^2.13.1"
curlify = "^2.2.1"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
addopts = " --alluredir=allure-results "

